Closed Bug 1082576 Opened 11 years ago Closed 11 years ago

Fix the XPCOM library loading error reporting code

Categories

(Core :: XPCOM, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla36

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

Details

Attachments

(1 file)

We build without UNICODE, so we end up calling the ANSI version of the function, and then we would attempt to interpret the resulting narrow char buffer as a wide char buffer.
Assignee: nobody → ehsan.akhgari
Blocks: winasan
Attachment #8504743 - Flags: review?(nfroyd)
Comment on attachment 8504743 [details] [diff] [review] Fix the XPCOM library loading error reporting code Review of attachment 8504743 [details] [diff] [review]: ----------------------------------------------------------------- Error paths...
Attachment #8504743 - Flags: review?(nfroyd) → review+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: