Bug 1082576 - Fix the XPCOM library loading error reporting code; r=froydnj

We build without UNICODE, so we end up calling the ANSI version
of the function, and then we would attempt to interpret the
resulting narrow char buffer as a wide char buffer.